style/common.css
/* @override http://patternslib.com/style/common.css */

@import url("../demo/grid/grid.css");

@import url("fontello/css/fontello.css");

@font-face { 
	font-family: "Patticons"; 
	src: url('fonts/patticons/patticons.woff') format('woff');
  }
  
/*@font-face {
    font-family: 'Patticons';
    src: url('fonts/patticons/patticons.svg') format('svg'); 
}*/

body {
	width: auto;
	position: relative;
	/*background-image: url(texture-light-grain.png);*/
	font: 14px/2em "Lucida Grande", Lucida, Verdana, sans-serif;
	color: #525151;
	margin: 0;
	background-color: white;
	max-width: 910px;
	margin-left: auto;
	margin-right: auto;
	padding: 70px 20px;
	text-rendering: optimizeLegibility;
}

#test {
	width: 100px;
	height: 100px;
	background: green url(pattern-icons.svg) 0 0;
	text-indent: -1000px;
	overflow: hidden;
}

#proeve {
	position: fixed;
	top: 0;
	left: 0;
	background-color: pink;
	z-index: 4;
}

@media only screen and (max-width: 767px) {

body {
	padding-right: 20px;
	padding-left: 20px;
} }

/* @group Image */

img {
	outline: none;
	border: none;
}

.documentation img {
	max-width: 85%;
	margin-right: auto;
	margin-left: auto;
	display: block;
}

@media only screen and (max-width: 767px) {

.documentation img {
	max-width: 100%;
} }



/* @end */

/* @group Tables */

table {
	border-radius: 4px;
	border-top: 1px solid #ddd;
	width: 100%;
	text-align: left;
	border-collapse: collapse;
	margin: 0 0 1.5em;
	font-size: 13px;
	line-height: 20px;
}

td,th {
	vertical-align: top;
	border-bottom: 1px solid #ddd;
	padding: 8px;
}

table thead, table tfoot {
	background: #f5f5f5;
}

th {
	background-color: #efefef;
}

table thead tr th:first-child, table tfoot tr td:first-child {
	border-left: none;
}

table thead tr th:last-child, table tfoot tr td:last-child {
	border-right: none;
}

/* @end */

/* @group Brand colours */

@primary-1: #3D617E;
@primary-2: #2F383F;
@primary-3: #192631;
@primary-4: #9CC3E3;
@primary-5: #C1D4E3;

@complement-1: #C39658;
@complement-2: #625647;
@complement-3: #33291A;
@complement-4: #E7CFAE;
@complement-5: #F2E2CB;

/* @end */

/* @group Site layout */

/* @group Main sections */

section.description,
section.documentation,
section.demo {
	position: relative;
	box-sizing: border-box;
	padding: 1.3em 0 2em 33.3%;
}

section.description:before,
section.documentation:before,
section.demo:before {
	content: " ";
	background: #ddd;
	display: block !Important;
	position: absolute;
	top: 0;
	right: -8px;
	left: -8px;
	height: 1px;
}

/* @group Data source */

section.documentation div[data-src]:before {
	position: absolute;
	content: attr(data-src);
	top: 17px;
	border-bottom: 1px solid #ddd;
	font-family: Georgia, "Times New Roman", Times, serif;
	color: gray;
	padding-left: 8px;
	text-align: right;
	padding-right: 8px;
	width: 250px;
	left: -8px;
	font-style: italic;
}



/* @end */

/* @group Description section */

section.description {
	float: left;
	width: 260px;
	z-index: 1;
	text-align: right;
	padding-left: 0;
}

section.description p {
	padding-left: 8px;
	font-style: italic;
	font-family: Georgia, "Times New Roman", Times, serif;
}



/* @end */

/* @group Documentation section */

section.documentation {
	clear: both;
}



/* @end */

/* @group Demo section */

section.demo {
	float: right;
	width: 66.66666666%;
	margin-left: -260px;
	padding-right: 0;
	padding-left: 0;
}

section.demo h2:first-child {
}

section.demo:after {
	*zoom: 1;
	content: " ";
	display: table;
	clear: both;
}



/* @end */



/* @end */

/* @group Component index */

#component-index h4 {
	clear: both;
	font-size: 16px;
	margin-top: 0;
	padding-left: 8px;
}

#demo #component-index {
	margin-top: 0;
}

.component-index .checklist label {
	overflow: hidden;
	float: left;
	width: 25%;
	box-sizing: border-box;
	line-height: 50px;
	position: relative;
	margin-right: 0;
	margin-left: 0;
	margin-bottom: 10px;
	user-select: none;
	padding: 0;
	-webkit-user-select: none;
	user-select: none;
	border-left: 4px solid rgba(0,0,0,0);
	border-right: 4px solid rgba(0,0,0,0);
}

.component-index .checklist label:before {
	margin-left: -40px;
	color: white;
}

.component-index a {
	font-size: 12px;
	padding: 0;
	text-decoration: none;
	transition: left 0.2s;
	line-height: 48px;
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
	background-color: gray;
	margin: 0;
	color: white;
}

.component-index .checklist label a {
	display: block;
	position: absolute;
	z-index: 0;
	white-space: nowrap;
	text-overflow: ellipsis;
	overflow: hidden;
	font-weight: normal;
	font-style: normal;
	padding-right: 0;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	transition: all 1s;
	-webkit-transition: all 1s;
}

.component-index a:before {
	content: " ";
	width: 40px;
	display: inline-block;
	height: 40px;
	vertical-align: middle;
	margin: 0 10px 0 12px;
	border-radius: 4px;
	text-align: center;
	font: 32px/40px Patticons;
	text-rendering: optimizeLegibility;
	}

.component-index .behavioural a {
	background-color: #3d607e;
	color: white;
}

.component-index .navigation a {
	background-color: #c37757;
	color: white;
}

.component-index .layout a {
	background-color: #915e79;
	color: white;
}

.component-index .forms a {
	background-color: #9ba476;
	color: white;
}

.component-index .fancy a {
	background-color: #a59baf;
	color: white;
}

#component-index a.current {
	outline: solid 2px black;
}

#component-index a sup {
	display: none;
}

/* @group Icons */

.component-index a.bumper:before {
	content: "b";
}

.component-index a.ajax:before {
	content: "i";
}

.component-index a.switching:before {
	
}

.component-index a.autofocus:before {
	background-position: 0 0;
}

.component-index a.auto-load:before {
	
}

.component-index a.auto-submit:before {
	content: "s";
	font-size: 45px;
	line-height: 62px;
	text-indent: 8px;
}

.component-index a.auto-suggest:before {
	background-position: 0 -64px;
}

.component-index a.carousel:before {
	content: "a";
}
/* ... */

